cli/tests/snapshot/snapshots/snapshot__error_stderr_record_access.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: record_insert: tried to extend a record with the field bar, but it already exists


