cli/tests/snapshot/snapshots/snapshot__error_stderr_record_destructuring_duplicate_ident.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: duplicated binding `one` in record pattern
  ┌─ [INPUTS_PATH]/errors/record_destructuring_duplicate_ident.ncl:3:25
  │
3 │ let f = fun { one, two, one } => { one, two }
  │               ---       ^^^ duplicated binding here
  │               │          
  │               previous binding here


