cli/tests/snapshot/snapshots/snapshot__error_stderr_value_contract_violation.ncl.snap
---
source: tests/snapshot/main.rs
expression: err
---
error: contract broken by the value of `foo`: no reason
  ┌─ [INPUTS_PATH]/errors/value_contract_violation.ncl:3:36
  │
3 │ { foo | std.FailWith "no reason" = 1 }.foo
  │         ------------------------   ^ applied to this expression
  │         │                           
  │         expected type


