cli/tests/snapshot/snapshots/snapshot__eval_stderr_array_at_empty_array.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller of `at`
       invalid array indexing
    ┌─ <stdlib/std.ncl>:169:9
    │
169 │       | std.contract.unstable.IndexedArrayFun 'Index
    │         -------------------------------------------- expected type
    │
    ┌─ [INPUTS_PATH]/errors/array_at_empty_array.ncl:3:16
    │
  3 │ std.array.at 0 []
    │                -- evaluated to this expression
    │
    = Can't index into an empty array

note: 
  ┌─ [INPUTS_PATH]/errors/array_at_empty_array.ncl:3:1
  │
3 │ std.array.at 0 []
  │ ----------------- (1) calling at
