cli/tests/snapshot/snapshots/snapshot__eval_stderr_array_range_reversed_indices.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller of `range`
       invalid range
    ┌─ <stdlib/std.ncl>:795:9
    │
795 │       | std.contract.unstable.RangeFun Dyn
    │         ---------------------------------- expected type
    │
    ┌─ [INPUTS_PATH]/errors/array_range_reversed_indices.ncl:3:19
    │
  3 │ std.array.range 1 0
    │                   - evaluated to this expression
    │
    = Expected a range end greater than 1 (range start), got 0

note: 
  ┌─ [INPUTS_PATH]/errors/array_range_reversed_indices.ncl:3:1
  │
3 │ std.array.range 1 0
  │ ------------------- (1) calling range
