cli/tests/snapshot/snapshots/snapshot__eval_stderr_array_range_step_negative_step.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the caller of `range_step`
       invalid range step
    ┌─ <stdlib/std.ncl>:770:9
    │
770 │       | std.contract.unstable.RangeFun (std.contract.unstable.RangeStep -> Dyn)
    │         ----------------------------------------------------------------------- expected type
    │
    ┌─ [INPUTS_PATH]/errors/array_range_step_negative_step.ncl:3:27
    │
  3 │ std.array.range_step 0 10 (-1)
    │                           ---- evaluated to this expression
    │
    ┌─ <unknown> (generated by evaluation):1:1
    │
  1 │ -1
    │ -- evaluated to this value
    │
    = Expected a positive number, got -1

note: 
  ┌─ [INPUTS_PATH]/errors/array_range_step_negative_step.ncl:3:1
  │
3 │ std.array.range_step 0 10 (-1)
  │ ------------------------------ (1) calling range_step
